// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Actions Menu block options copies and pastes a block 1`] = `
"<!-- fin:paragraph -->
<p>Hello!</p>
<!-- /fin:paragraph -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->

<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->"
`;

exports[`Block Actions Menu block options cuts and pastes a block 1`] = `
"<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->

<!-- fin:paragraph -->
<p>Hello!</p>
<!-- /fin:paragraph -->"
`;

exports[`Block Actions Menu block options does not replace a non empty Paragraph block when pasting another block 1`] = `
"<!-- fin:paragraph -->
<p>Hello!</p>
<!-- /fin:paragraph -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->

<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->"
`;

exports[`Block Actions Menu block options duplicates a block 1`] = `
"<!-- fin:paragraph -->
<p>Hello!</p>
<!-- /fin:paragraph -->

<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->"
`;

exports[`Block Actions Menu block options transforms a Paragraph block into a Pullquote block 1`] = `
"<!-- fin:pullquote -->
<figure class="fin-block-pullquote"><blockquote><p>Hello!</p></blockquote></figure>
<!-- /fin:pullquote -->

<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->"
`;

exports[`Block Actions Menu moving blocks disables the Move Down button for the last block 1`] = `
"<!-- fin:paragraph -->
<p>Hello!</p>
<!-- /fin:paragraph -->

<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->"
`;

exports[`Block Actions Menu moving blocks disables the Move Up button for the first block 1`] = `
"<!-- fin:paragraph -->
<p>Hello!</p>
<!-- /fin:paragraph -->

<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->

<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->"
`;

exports[`Block Actions Menu moving blocks moves blocks up and down 1`] = `
"<!-- fin:heading -->
<h2 class="fin-block-heading"></h2>
<!-- /fin:heading -->

<!-- fin:paragraph -->
<p>Hello!</p>
<!-- /fin:paragraph -->

<!-- fin:spacer -->
<div style="height:100px" aria-hidden="true" class="fin-block-spacer"></div>
<!-- /fin:spacer -->"
`;
